--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="assets/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jailson, O Abacate</title>
 </head>
+
 <body>
-    <h1>oi</h1>
+    <header>
+        <center>
+            <h1>Criação de Abacate em Água</h1>
+            <p>Passo a Passo Para Criação Fácil, Rápida e Divertida!!!
+            <p>
+        </center>
+    </header>
+
+    <img src="assets/MainImage.jpeg">
+
+    <center>
+        <section>
+            <article>
+                <h2>Introdução:</h2>
+                <p>
+                    Muitas pessoas buscam em iniciar a sua experiência no cultivo de plantas, mas não sabem como
+                    iniciar, muitas vezes possuem dificuldades em escolherem plansas adequadas as suas necessidades. Uma
+                    opção muito requisitada pelos iniciantes é o cultivo de abacate em água, por serem fáceis de manejo,
+                    além de ser possível o acompanhamento de perto, acompanhando o crescimento da sua plantinha.<br>
+                    Em minha própria experiência, no cultivo de abacate, eu lidei com algumas dificuldades, que nem
+                    sempre possuem respostas ou auxilios em sites na internet, o que muitas vezes me deixou preocupado,
+                    com medo de perder meses de plantio. O objetivo desse site é explicar como iniciar, embasadas na
+                    criação do Jailson Ignácio, meu próprio abacate, e ajudar aqueles que desejam iniciar nessa longa e
+                    maravilhosa jornada de criação de plantas, em especial O Abacatte!
+                </p>
+            </article>
+
+            <aside>
+                <h2>O Passo a Passo:</h2>
+                <ul>
+                    <li>Passo I:<br>
+                        A Escolha de Semente e Recipiente</li>
+                    <br>
+                    <li>Passo II:<br>
+                        Instalação das Hastes</li>
+                    <br>
+                    <li>Passo III:<br>
+                        Cuidados e Regas Diárias</li>
+                    <br>
+                    <li>Passo IV:<br>
+                        Expectativas e Resultados</li>
+                </ul>
+            </aside>
+        </section>
+
+        <article>
+            <h2>Passo I - A Escolha de Semente e Recipiente:</h2>
+            <p></p>
+        </article>
+
+        <article>
+            <h2>Passo II - Instalação das Hastes:</h2>
+            <p></p>
+        </article>
+
+        <article>
+            <h2>Passo III - Cuidados e Regas Diárias:</h2>
+            <p></p>
+        </article>
+
+        <article>
+            <h2>Passo IV - Expectativas e Resultados:</h2>
+            <p></p>
+        </article>
+
+        <center>
+
+            <footer>
+                <h3>Alfa One - Software Development</h3>
+            </footer>
+
+        </center>
 </body>
+
 </html>
+
+<!-- Pica das Galáxias -->
