--- a/index.html
+++ b/index.html
@@ -56,28 +56,68 @@
 
         <article>
             <h2>Passo I - A Escolha de Semente e Recipiente:</h2>
-            <p></p>
+            <p>A priori, pode parecer estranho se preocupar com a escolha da semente e do recipiente para coloca-la,
+                mas, sem dúvidas, é um planejamento um tanto quanto importante. Ao escolher sua semente, se você tiver
+                mais de uma opção e deseja utilizar somente uma delas, priorize aquela que esta em melhor condição. Uma
+                semente mais nova, com menor quantidade de machucados e maior aumentará suas chances de sucesso.<br>
+                Além disso, a escolha de um recipiente ideal melhora e acelera o tempo de crescimento de sua plantinha.
+                O ideal é que sua semente fique submersa pela metada, entrando em contato o fundo dela, onde nascerá a
+                raiz, com a água. Alguns tipos de materiais, como de barro, acabam absorvendo muia água, então é
+                importante conhecer bem as características do que você ira utilizar para criar seu abacate, uma vez que
+                isso interfere diretamente na quantidade de água.</p>
         </article>
 
         <article>
             <h2>Passo II - Instalação das Hastes:</h2>
-            <p></p>
+            <p>A processo de instalação dos suportes, ou hastes, no seu abacate parece uma tarefa simples, mas pode
+                levar a algumas complicações inesperadas. Recomento utilizar quatro palitos, em vez de apenas três, e
+                coloca-los entorno de seu abacate, na região equatorial. Colocar poucos palitos, e muito longe do meio
+                da semente o deixará desbalanceado, podendo leva-lo a desmontar, e você terá assim duas metades de uma
+                semente de abacate.<br>
+                Tome cuidado com a direção de seu abacate. A parte mais achatada é o fundo, enquanto a mais arredondada
+                é o topo. O fundo deve estar em contato com a água, porque será de lá que as raizes sairão. Já a parte
+                arredondada será de onde sairá os caules e as folhas. Tome cuidado para não planta-lo ao contrário.
+                Procure Utilizar materias que não vão entortar facilmente, ou palitos que cederão por estarem molhados,
+                isso garantirá melhor integridade da estrutura. E caso seu abacate desmonte, recomendo que amarre os
+                palitos na parte onde foi rachada, como mostrada na foto acima, situação que tambem aconteceu no nosso
+                cultivo. Não se desespere, e tudo acontecerá bem!</p>
         </article>
 
         <article>
             <h2>Passo III - Cuidados e Regas Diárias:</h2>
-            <p></p>
+            <p>As sementes de abacate, como qualquer outra, precisam de cuidados para que se desenvolvam bem. Acompanhar
+                o crescimento dele, mesmo que não seja visivel nas primeiras semanas qualquer tipo de alteração, é
+                importante, pois te dara uma noção de como anda o crescimento da sua plantinha. Não tenha medo de
+                levanta-lo para acompanhar, mas tome cuidado para não feri-lo.<br>
+                Lembre-se de trocar a água de seu abacate diariamente, isso vai ajuda-lo a crescer mais rapidamente e
+                com saúde. Manter a temparatura da água regulada, como vasos de barro fazem, tambem ajudam no
+                crescimento de sua plantinha. Se optar por esse tipo de vaso, que não possui valor muito elevado,
+                lembre-se que eles absorvem quantidade maior de água, e pode ser necessário mais de uma rega por dia.
+            </p>
         </article>
 
         <article>
-            <h2>Passo IV - Expectativas e Resultados:</h2>
-            <p></p>
+            <h2>Passo IV - Expectativas e Realidades:</h2>
+            <p>A Expectativa de quem cultiva uma semente de abacate é chegar a uma muda vistosa e verdejante, o que pode
+                demorar. Abacates possuem um crescimento lento, em comparação a outras sementes, como de feijão por
+                exemplo. Não desanime no começo, que apesar de demorar, acompanhar o desenvolvimento de sua plantinha
+                com certeza vai ser interessante. Não se preocupe com o resultado, mas aproveite cada dia de sua
+                experiência com cultivo.<br>
+                Caso alguma coisa aconteça, que não esteja de acordo com o planejado, não se desespere, tenha calma e
+                tente resolver tudo da melhor maneira possível. Alguns imprevistos, como seu abacate desmontar ou seu
+                vaso quebrar podem acontecer, mas lembre-se: Abacates são muito resistentes, eles aguentam qualquer
+                coisa!<br>
+                Procure não deixar seu abacate diretamente com o sol, principalmente quando durante horários mais
+                quentes. Isso pode danificar seu cultivo, e matar sua planta. Tome Cuidado!
+                Esperamos que essas dicas sejam úteis, e que possam desenvolver suas habilidades com plantas e iniciar
+                no mundo da botânica, a propósito, um abacate pode ser apenas o começo de um hobbie sustentável, que
+                busca ajudar e melhorar o meio ambiente!!!</p>
         </article>
 
         <center>
 
             <footer>
-                <h3>Alfa One - Software Development</h3>
+                <h3>Felipe Cagnin - Software Development</h3>
             </footer>
 
         </center>
